Added methods section

--- a/_toc.yml
+++ b/_toc.yml
@@ -4,6 +4,6 @@
 format: jb-book
 root: intro
 chapters:
-- file: markdown
-- file: notebooks
+- file: background
+- file: methods
 - file: markdown-notebooks
